# OssPerformance

./: CMakeLists.txt  README.md
Benchmarks/: CMakeLists.txt
Benchmarks/AabbTree/: AabbTree.cpp  CMakeLists.txt
Benchmarks/Collision/: CMakeLists.txt  Collision.cpp
Benchmarks/Compute/: CMakeLists.txt  Compute.cpp  ComputeMain.cpp  TBB.cpp  ViennaCl.cpp
Benchmarks/StdLibrary/: CMakeLists.txt  StdContainers.cpp  StdLibrary.cpp
Benchmarks/Vectorization/: CMakeLists.txt  Solvers.cpp  Vectorize.cpp
Benchmarks/Vectorization/AVX/: CMakeLists.txt
Benchmarks/Vectorization/SSE/: CMakeLists.txt
Data/: distal-artery.mtx  sheet.ply  sheet.yaml  view.yaml
Deformables/: CMakeLists.txt  Deformables.cpp  Scene.cpp  Scene.h  config.txt.in
